--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><meta charset='utf-8'><title>〖 Spirit Sign ~ 「 Fantasy Seal」〗</title><style>#SpellCard062{left:0px;position:fixed;text-align:center;top:50%;}</style></head><body><div id='SpellCard062'>〖 Spirit Sign ~ 「 Fantasy Seal」〗</div></body></html>
+<!DOCTYPE html><html><head><meta charset='utf-8'><title>〖 Spirit Sign ~ 「 Fantasy Seal」〗</title><style>#SpellCard062{left:0px;position:fixed;text-align:center;top:50%;width:100%;}</style></head><body><div id='SpellCard062'>〖 Spirit Sign ~ 「 Fantasy Seal」〗</div></body></html>
